# blasoxide

./: .travis.yml  Cargo.toml  LICENSE  README.md  jenkins (2).yaml  travis.yml
benches/: l3d.rs  l3s.rs  level1.rs  level2.rs  level3.rs  sgemm_bench.rs
src/: aligned_alloc.rs  common.rs  context.rs  gemm.rs  kernel.rs  l1d.rs  l1s.rs  l2d.rs  l2s.rs  l3d.rs  l3s.rs  level1.rs  level2.rs  level3.rs  lib.rs  send.rs  util.rs
src/fma/: common.rs  kernel.rs  l1d.rs  l1s.rs  l3kernel.rs  mod.rs
src/generic/: kernel.rs  l1d.rs  l1s.rs  l3kernel.rs  mod.rs
src/kernels/: mod.rs
src/kernels/avx/: fma.rs  hsum.rs  intrinsics.rs  l1d.rs  l1s.rs  l3d.rs  l3s.rs  mod.rs
src/kernels/generic/: l3d.rs  l3s.rs  mod.rs
tests/: l1d.rs  l1s.rs  l2d.rs  l2s.rs  l3d.rs  l3s.rs  level1.rs  level2.rs  level3.rs
