[package]
name = "blasoxide"
version = "0.2.0"
authors = ["Özgür Akkurt <oezgurmakkurt@gmail.com>"]
edition = "2018"
description = "BLAS implementation in rust"
repository = "https://github.com/oezgurmakkurt/blasoxide"
readme = "README.md"
keywords = ["science", "math", "simd", "blas"]
categories = ["science"]
license = "MIT"

[dependencies]
rayon = "1.0.3"

[package.metadata.docs.rs]
rustc-args = ["-C", "target-feature=+avx2,+fma"]
rustdoc-args = ["-C", "target-feature=+avx2,+fma"]
